# TastySpectrum

./: .gitignore  CHANGELOG.md  DESIGN_NOTES.md  KNOWN_ISSUES.md  LICENSE  README.md  TastySpectrum.cabal  cabal.project  tasty-spectrum.cabal
.github/workflows/: build.yml
TestPlugin/: Test.cabal  Test.hs
app/: Main.hs
app/Test/Tasty/Ingredients/: Spectrum.hs
app/Test/Tasty/Ingredients/Spectrum/: CSVToForest.hs  GenForest.hs  Parse.hs  ParseCSV.hs  Plugin.hs  Rules.hs  SBFL.hs  Types.hs  Weights.hs
example/: Main.hs
plugin/: tasty-spectrum-plugin.cabal
plugin/src/Test/Tasty/Ingredients/Spectrum/: Plugin.hs
spectrum-example/: Example.cabal  Main.hs  spectrum-example.csv
spectrum-example/src/: Ex.hs
spectrum-example/test/: Main.hs
test/: Main.hs  dstar.csv  examples.test  notes.md  tarantula.csv
