cabal-version:      3.0
name: test
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Matthías Páll Gissurarson
maintainer:         mpg@mpg.is
build-type:         Simple

executable tester
  default-language: Haskell2010
  main-is: Test.hs
  build-depends: base >= 4 && < 5,
                 tasty-spectrum
