cabal-version:      3.0
name:               tasty-spectrum-plugin
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Matthías Páll Gissurarson
maintainer:         mpg@mpg.is
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    -- Base language which the package is written in.
    default-language: Haskell2010
    exposed-modules: Test.Tasty.Ingredients.Spectrum.Plugin
    ghc-options: -O2
    hs-source-dirs: src/
    build-depends:    base >=4 && < 5,
                      containers,
                      tagged,
                      ghc,
                      filepath,
                      directory

